# ytui

./: Cargo.toml  out
src/: app.rs  args.rs  event.rs  main.rs  util.rs
src/app/: mod.rs  player.rs  search.rs  style.rs  ui.rs  videos.rs  widgets.rs  worker.rs
