[package]
name = "ytui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive", "cargo"] }
crossterm = "0.26.1"
image =  { version = "0.24.6", features = ["png"] }
invidious = { version = "0.4.1", features = ["reqwest"] }
ratatui = "0.20.1"
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros"] }
tokio-util = "0.7.8"
unicode-width = "0.1.10"
which = "4.4.0"
