[package]
name = "ytui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.2", features = ["derive", "cargo"] }
crossterm = "0.26.1"
image =  { version = "0.24.6", features = ["png", "jpeg"] }
invidious = { version = "0.5.0", features = ["reqwest_async"] }
ratatui = "0.21.0"
reqwest = "0.11.18"
tokio = { version = "1.28.2", default-features = false, features = ["rt-multi-thread", "macros"] }
tokio-util = "0.7.8"
unicode-width = "0.1.10"
which = "4.4.0"
